fix: better login image alignment

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -14,5 +14,6 @@ h1 {
 .img-login {
   background: url("../../assets/img/images/login.jpg") no-repeat;
   background-size: cover;
+  background-position-y: 50%;
 }
 
